2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ten_across.scm (less-than-same-cards): Removed some diagnostic
	code that shouldn't be there.

	* *.scm: Changes to remove trailing spaces in translatable
	strings.

	* aisleriot.schemas.in: Remove periods from the end of short
	descriptions.

2003-06-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: Remove the dirent.h include since we don't need it
	anymore and it can upset FreeBSD if we don't also include
	sys/types.h which is also unneeded.

2003-06-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c (new_game): Fix Jon's crash-at-start bug. If the game was
	unplayable from the start (fortress could do this) then it 
	would do weird shit and possibly crash. This would also have
	caused anti-social behaviour on the occasional new game.

2003-06-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* slot.h: 
	* slot.c:
	* card.c: 
	* menu.c: 
	* press_data.c: 
	* events.c: 
	* cscmi.c: 
	* dialog.c: 
	* sol.c: 
	* slot.c:
	* splash.c: Compile fixes.

2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* slot.c: 
	* card.h: 
	* card.c:
	* draw.c: Use pixbuf for slot image.  This solves the problem of
	unmasked pixels in the corners of the slot pixmaps.

	* dialog.c: Fix compiler warning.
	
2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.scm (redo): Horrific thinko. #f is a little different from #t.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c:
	* sol.c: i18n fixes from Christian Neumair (bug #114875).
	
	* valentine.scm (button-clicked): () is not actually valid
	scheme. 1.3.4 allowed it 1.6 doesn't. Replaced with the equivalent
	'(). Fixes bug #114850.

	* dialog.c (show_preferences_dialog): Use games_frame because it
	looks cool.

2003-06-10  Christian Neumair  <chris@gnome-de.org>

	* *.scm: Replace ":  " by ": ". There is no reason to lengthen the
	status bar messages by one space.

2003-06-09  William Jon McCann  <mccann@jhu.edu>
