@@ -53,8 +53,8 @@ General:
 	  reality. Also make a big all-of-2.3 NEWS entry for 2.4.0.
 
 AisleRiot:
-        - Consider spider game-over too soon (bug 101984)
         - Odessa hint function (bug 51694)
+        - I've managed to make the splash graphic disappear.
 
 Blackjack:
         - Whatever the UI review says.
@@ -77,7 +77,7 @@ Gnobots2:
         - Find out why it crashes for some people (bugs 112059, 113186).
         - Fix no-moves issue (bug 107846).
         - Since we can't change some settings mid-game an end-game option
-          would be good.
+          would be good (also for bug 107846).
 
 Gnome-stones:
         - Also the joystick tab.
@@ -89,9 +89,6 @@ Gnometris:
         - Update xtris backgrounds to give the current name (perhaps
           replace the x with a foot). Not urgent and can wait until 2.5.
         - Have another go at tracking down bug 103787.
-        - Check that there's nothing funny in the way we build C++
-          programs (bug 92559) or alternatively confirm that there is
-          a RedHat 7.2 package that could be missing.
 
 Gnomine:
         - Resizable window - it doesn't handle shrinking.
