@@ -25,7 +25,7 @@ can be filled with any card or movable unit.</entry></row>
 <bridgehead>Goal</bridgehead>
 <para>
 To have eight sequences of cards (two for each suit) going down from King
-down to Ace.
+down to Ace in the foundation.
 </para>
 <bridgehead>Rules</bridgehead>
 <para>
@@ -39,10 +39,8 @@ pile.  However, all piles must be non-empty.  If an empty pile exists,
 an error message will appear.
 </para>
 <para>
-The Foundation piles are there for your convenience only.  When a
-sequence of thirteen cards (from King to Ace in one suit) exists, it can
-be moved to an empty Foundation pile.  Once there, these cards are no
-longer in play.
+A sequence of thirteen cards can be moved to a foundation pile.  Once
+there, these cards are no longer in play.
 </para>
 <bridgehead>Options</bridgehead>
 <para>None</para>
