@@ -1,3 +1,9 @@
+2003-07-05  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* C/spider.xml: Updated to reflect a subtle change in the win
+	condition (for consistency you now have to move the completed
+	sequences up to the foundation). 
+
 2003-06-29  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* C/*.xml: Updated to work with even the more broken yelp
