@@ -1,3 +1,8 @@
+2003-07-05  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* spider.scm: Made the ending condition a little less aggressive
+	and more like spiderette. Patch from Paolo Borelli.
+
 2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* ten_across.scm (less-than-same-cards): Removed some diagnostic
